chore(routing): add vercel.json and _redirects for correct SPA routing on production

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ VITE_SUPABASE_PUBLISHABLE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJz
 VITE_SUPABASE_URL="https://vidrcoxcykamxhnsepjx.supabase.co"
 VITE_STRAVA_CLIENT_ID="202955"
 VITE_STRAVA_CLIENT_SECRET="d000cb99fbc46ed8112ac8134c604b63f03b268c"
-VITE_CLERK_PUBLISHABLE_KEY=pk_test_d2hvbGUtY29yYWwtOTguY2xlcmsuYWNjb3VudHMuZGV2JA
+VITE_CLERK_PUBLISHABLE_KEY="pk_test_d2hvbGUtY29yYWwtOTguY2xlcmsuYWNjb3VudHMuZGV2JA"
